--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "slim/views": "0.1.3",
         "twig/twig": "v1.35.0",
         "sergeytsalkov/meekrodb": "v2.3",
-        "monolog/monolog": "1.23.0"
+        "monolog/monolog": "1.23.0",
+        "facebook/graph-sdk" : "~5.0"
     }
 }
