--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "twig/twig": "v1.35.0",
         "sergeytsalkov/meekrodb": "v2.3",
         "monolog/monolog": "1.23.0",
-       "facebook/graph-sdk" : "~5.0",
-        "hybridauth/hybridauth": "2.3.0"
+       "facebook/graph-sdk" : "~5.0"
+       
        
     }
 }
